<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6b000000"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_popup_cardview"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left|start"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.ti.rotogro.utils.JustifiedTextView xmlns:noghteh="http://noghteh.ir"
                    android:id="@+id/alert_dialog_for_term_TXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    noghteh:textColor="@android:color/black"
                    noghteh:textSize="14sp">

                </com.ti.rotogro.utils.JustifiedTextView>


            </RelativeLayout>


            <CheckBox
                android:id="@+id/terms_ch"
                style="@android:style/Widget.Holo.Light.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:button="@drawable/style_checkbox_selector"
                android:padding="4dp"
                android:text="@string/label_agree_ch"
                android:textColor="@android:color/black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/layout_decline_TXT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/label_decline"
                android:textAllCaps="true"
                android:textColor="@drawable/selector_for_text_decline"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/layout_accept_TXT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/label_accept"
                android:textAllCaps="true"
                android:textColor="@drawable/selector_for_text"
                android:textSize="14sp"
                android:textStyle="normal"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>