<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".ui.contact.TIContactFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_contact_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:padding="@dimen/margin_10"
            android:text="@string/call_for_details"
            android:textAllCaps="false"
            android:textSize="@dimen/font_25" />


        <LinearLayout
            android:id="@+id/state_spinner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_30"
            android:weightSum="@integer/int_three">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="@integer/int_one"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/label_state"
                android:textSize="@dimen/font_20" />

            <Spinner
                android:id="@+id/fragment_state_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:background="@null"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="@dimen/down_arrow_width"
                android:layout_height="@dimen/down_arrow_height"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:padding="@dimen/margin_5"
                android:src="@drawable/ic_arrow_down" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/city_spinner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_20"
            android:weightSum="@integer/int_three">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="@integer/int_one"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/label_city"
                android:textSize="@dimen/font_20" />

            <Spinner
                android:id="@+id/fragment_city_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:background="@null"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="@dimen/down_arrow_width"
                android:layout_height="@dimen/down_arrow_height"
                android:layout_weight="0.5"
                android:padding="@dimen/margin_5"
                android:src="@drawable/ic_arrow_down" />
        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_contact_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_20" />

        <LinearLayout
            android:id="@+id/nodata_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/image_height_180"
                android:layout_height="@dimen/image_height_180"
                android:layout_gravity="center"
                android:src="@drawable/ic_nodata" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="No Records Found" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>